--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+autopep8==1.7.0
 cachetools==5.2.0
 click==8.1.3
 colorama==0.4.5
+DateTime==4.5
 google-auth==2.9.1
 google-auth-oauthlib==0.5.2
 gspread==5.4.0
@@ -9,8 +11,10 @@ oauthlib==3.2.0
 pandas==1.4.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycodestyle==2.9.1
 pytz==2022.2.1
 requests-oauthlib==1.3.1
 rsa==4.9
 stdiomask==0.0.6
 typer==0.6.1
+zope.interface==5.4.0
